fix select z-index

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -856,3 +856,7 @@ ul {
   border: none;
   background: none;
 }
+
+.select2-drop-mask {
+  z-index: 19999;
+}
